# refunder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: multi-user.md  phase2-outbound-claims.md  phase3-form-automation.md  product-overview.md
infrastructure/: README.md
infrastructure/terraform/: lambda.tf  main.tf  rds.tf  s3.tf  ses.tf
landing/: index.html
scripts/: invoke_local.py  setup_local.sh
src/: __init__.py  config.py
src/claims/: __init__.py  manager.py  state_machine.py
src/cli/: __init__.py  main.py
src/db/: __init__.py  connection.py
src/db/migrations/: 001_initial.sql
src/extraction/: __init__.py  classifier.py  extractor.py  prompts.py
src/ingestion/: __init__.py  email_parser.py  s3_store.py  ses_handler.py
src/models/: __init__.py  claim.py
tests/: __init__.py  test_claim_manager.py  test_classifier.py  test_email_parser.py  test_extractor.py
tests/fixtures/: sample_email_carrental.txt  sample_email_eu261.txt  sample_email_retail.txt  sample_ses_event.json
